sonnar bugs, smells protection